package aistrategy;

import model.BoardPoint;
import view.ChessBoard;

/*
 * 翻棋优先策略。
 * 会在能够翻转最多敌人棋子的走法中随机选择一个
 * 也就是Swap First Strategy
 * 
 * 
 */
public class SwapFirstStrategy implements AIStrategy{

    @Override
    public BoardPoint getStep(ChessBoard chessBoard) {
        // TODO Auto-generated method stub
        return null;
    }
    
}
